--- a/applying_ML_algorithms/Decision_Tree_PRMLproj.ipynb
+++ b/applying_ML_algorithms/Decision_Tree_PRMLproj.ipynb
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "5d5y0LqN6ez7"
       },
-      "execution_count": 243,
+      "execution_count": 256,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "Vx-OAfn26wNb"
       },
-      "execution_count": 244,
+      "execution_count": 257,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "ln9jMSpi6zyS"
       },
-      "execution_count": 245,
+      "execution_count": 258,
       "outputs": []
     },
     {
@@ -179,12 +179,12 @@
         "id": "kIlLzIEfKuod"
       },
       "source": [
-        "## Loading filtered_CNN_features_dataset"
+        "## Loading filtered_CNN_features_dataset and filtering on basis of count of images per person"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 246,
+      "execution_count": 259,
       "metadata": {
         "id": "6M8EKNTFKuoe"
       },
@@ -197,13 +197,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 247,
+      "execution_count": 260,
       "metadata": {
         "id": "g0E2_CS2Kuof",
-        "outputId": "46689b69-0b03-412b-a4ff-3e5c10612c54",
+        "outputId": "cb3a974d-28b1-46f0-b49a-079ed92baddb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 424
         }
       },
       "outputs": [
@@ -267,7 +267,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-007cb396-416f-41c1-b813-d89038ce5f1a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8c8cb91c-e10c-4738-9095-1530d8c272f6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -581,7 +581,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-007cb396-416f-41c1-b813-d89038ce5f1a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c8cb91c-e10c-4738-9095-1530d8c272f6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -633,12 +633,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-007cb396-416f-41c1-b813-d89038ce5f1a button.colab-df-convert');\n",
+              "        document.querySelector('#df-8c8cb91c-e10c-4738-9095-1530d8c272f6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-007cb396-416f-41c1-b813-d89038ce5f1a');\n",
+              "        const element = document.querySelector('#df-8c8cb91c-e10c-4738-9095-1530d8c272f6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -658,8 +658,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-26ab3e97-7f1f-436d-84e2-ef7d1d7e3bb2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-26ab3e97-7f1f-436d-84e2-ef7d1d7e3bb2')\"\n",
+              "<div id=\"df-266ebbb7-633f-45f4-8b16-b4cb9b6fba9b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-266ebbb7-633f-45f4-8b16-b4cb9b6fba9b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -778,14 +778,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-26ab3e97-7f1f-436d-84e2-ef7d1d7e3bb2 button');\n",
+              "        document.querySelector('#df-266ebbb7-633f-45f4-8b16-b4cb9b6fba9b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_b2f064e7-e56f-4cfb-92b8-1ebba97d0728\">\n",
+              "  <div id=\"id_6e95c5bf-15fd-4cd4-84a0-f1628305fa8e\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -829,7 +829,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_b2f064e7-e56f-4cfb-92b8-1ebba97d0728 button.colab-df-generate');\n",
+              "        document.querySelector('#id_6e95c5bf-15fd-4cd4-84a0-f1628305fa8e button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -849,7 +849,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 247
+          "execution_count": 260
         }
       ],
       "source": [
@@ -881,10 +881,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 248,
+      "execution_count": 261,
       "metadata": {
         "id": "V6trajq0Kuog",
-        "outputId": "7135441a-d89e-4b96-a647-50879a67a19c",
+        "outputId": "f26ebd64-18c2-460e-92d9-4f2fbd98319a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -943,7 +943,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## applying DT on CNN data"
+        "## Applying DT on CNN data"
       ],
       "metadata": {
         "id": "aZ0dt6F_7EML"
@@ -974,13 +974,13 @@
       ],
       "metadata": {
         "id": "UbjtL9KXM5KZ",
-        "outputId": "49127ca5-97aa-4b4a-b6aa-5496301c1c5e",
+        "outputId": "ae434c84-2bae-4e0d-c6b6-a69c0c4bb045",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 430
         }
       },
-      "execution_count": 249,
+      "execution_count": 262,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1014,9 +1014,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6ac9a3a-4e7b-4835-b725-5308942738d8"
+        "outputId": "fd7ee281-f50f-48be-c265-1dfedc527060"
       },
-      "execution_count": 250,
+      "execution_count": 263,
       "outputs": [
         {
           "output_type": "stream",
@@ -1038,22 +1038,22 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": 251,
-      "metadata": {
-        "id": "_ZD3H2UGHgyP"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.decomposition import PCA\n",
-        "from sklearn.preprocessing import LabelEncoder, StandardScaler"
-      ]
+        "## Loading filtered_LDA_features_dataset and filtering on basis of count of images per person"
+      ],
+      "metadata": {
+        "id": "Ee7hk9KsdkFt"
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "\n",
         "url_filtered_LBP_features_dataset = 'https://raw.githubusercontent.com/AgarwalMayank2/Face_Detection/refs/heads/main/processed_dataset/filtered_LBP_features_dataset.csv' #for CNN limited\n",
         "df_LBP = pd.read_csv(url_filtered_LBP_features_dataset) # reading url for extracted CNN_features_dataset_limited.csv\n",
         "df_LBP.drop('Unnamed: 0', axis=1, inplace=True)\n",
@@ -1071,13 +1071,13 @@
       ],
       "metadata": {
         "id": "8boc3SR3buS7",
-        "outputId": "9251b11e-4206-4926-ae04-336b74a26741",
+        "outputId": "7cfcddef-b878-4a64-b50d-0f1bda4cff1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 424
         }
       },
-      "execution_count": 252,
+      "execution_count": 264,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1126,7 +1126,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ab0a10f0-7f96-441d-919d-5b74025ebc03\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9dca8ea8-a4e3-4a09-a056-7e0747f94992\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1440,7 +1440,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ab0a10f0-7f96-441d-919d-5b74025ebc03')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9dca8ea8-a4e3-4a09-a056-7e0747f94992')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1492,12 +1492,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ab0a10f0-7f96-441d-919d-5b74025ebc03 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9dca8ea8-a4e3-4a09-a056-7e0747f94992 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ab0a10f0-7f96-441d-919d-5b74025ebc03');\n",
+              "        const element = document.querySelector('#df-9dca8ea8-a4e3-4a09-a056-7e0747f94992');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1517,8 +1517,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-66f52d71-91cf-4d72-9ba5-b37089546648\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-66f52d71-91cf-4d72-9ba5-b37089546648')\"\n",
+              "<div id=\"df-630d738f-f5c1-4464-aeee-0a0a9116860a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-630d738f-f5c1-4464-aeee-0a0a9116860a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1637,14 +1637,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-66f52d71-91cf-4d72-9ba5-b37089546648 button');\n",
+              "        document.querySelector('#df-630d738f-f5c1-4464-aeee-0a0a9116860a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_f34ae998-dbff-4e46-b225-9b69c85868fa\">\n",
+              "  <div id=\"id_8fcba3f7-a79d-42c1-bf1b-0e1022a45614\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1688,7 +1688,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_f34ae998-dbff-4e46-b225-9b69c85868fa button.colab-df-generate');\n",
+              "        document.querySelector('#id_8fcba3f7-a79d-42c1-bf1b-0e1022a45614 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1708,9 +1708,18 @@
             }
           },
           "metadata": {},
-          "execution_count": 252
+          "execution_count": 264
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Splitting dataframe into train, validation and test in 4:1 ratio"
+      ],
+      "metadata": {
+        "id": "SZOTFesRhVNS"
+      }
     },
     {
       "cell_type": "code",
@@ -1751,12 +1760,12 @@
       ],
       "metadata": {
         "id": "nIZr_BbzH0J5",
-        "outputId": "49e33db9-25ae-42c4-b1bc-55961e41ada9",
+        "outputId": "236b7943-4c12-4b81-e985-22ccf6a6855e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 253,
+      "execution_count": 265,
       "outputs": [
         {
           "output_type": "stream",
@@ -1768,6 +1777,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Applying DT on LBP data"
+      ],
+      "metadata": {
+        "id": "JuZhU1P-hawK"
+      }
     },
     {
       "cell_type": "code",
@@ -1794,13 +1812,13 @@
       ],
       "metadata": {
         "id": "KJnzk0MHLwqm",
-        "outputId": "f81b7d61-f644-4931-d392-1c1ac3aa2c80",
+        "outputId": "c31bdc89-c4b1-4cfb-db4d-60a5fb63cda4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 430
         }
       },
-      "execution_count": 254,
+      "execution_count": 266,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1830,12 +1848,12 @@
       ],
       "metadata": {
         "id": "kg-Mi0l9KZvz",
-        "outputId": "e4d07504-322b-429c-f45c-eb35f4eab0ba",
+        "outputId": "080103b0-10d7-421e-fc69-85dde00b255d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 255,
+      "execution_count": 267,
       "outputs": [
         {
           "output_type": "stream",
@@ -1853,8 +1871,44 @@
       "metadata": {
         "id": "qGsvcFEt4Kic"
       },
-      "execution_count": 255,
+      "execution_count": 267,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Decision Tree on Combined CNN and LBP features with LDA"
+      ],
+      "metadata": {
+        "id": "at5jI54gh1fs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loading filtered CNN and LBP dataset and again filtering on basis of count of images per person"
+      ],
+      "metadata": {
+        "id": "R4-krzf2iRdu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Splitting dataframe into train, validation and test in 4:1 ratio"
+      ],
+      "metadata": {
+        "id": "d6rE0PxniR1-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Applying DT on combined data"
+      ],
+      "metadata": {
+        "id": "wg7T0NbtiSTV"
+      }
     }
   ],
   "metadata": {
