Make the data set look good

--- a/applying_ML_algorithms/Clustering_PRMLproj.ipynb
+++ b/applying_ML_algorithms/Clustering_PRMLproj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu8twBkl8c4STP/tM01XOg",
+      "authorship_tag": "ABX9TyMbcgCX0pSbBbgWiPr2wNhC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "6M8EKNTFKuoe"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "g0E2_CS2Kuof",
         "outputId": "9acadfe7-0cec-46b2-8eac-2747ab12c9f5",
@@ -740,6 +740,8 @@
       "source": [
         "url_filtered_CNN_features_dataset = 'https://raw.githubusercontent.com/AgarwalMayank2/Face_Detection/refs/heads/main/processed_dataset/filtered_CNN_features_dataset.csv' #for CNN limited\n",
         "df_CNN = pd.read_csv(url_filtered_CNN_features_dataset) # reading url for extracted CNN_features_dataset_limited.csv\n",
+        "df_CNN = df_CNN.drop(df_CNN.columns[0], axis=1)\n",
+        "df_CNN.columns = range(df_CNN.shape[1])\n",
         "df_CNN"
       ]
     },
@@ -754,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "V6trajq0Kuog",
         "outputId": "1e382f43-81b3-4912-83a1-474a3a30856c",
@@ -805,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "kpmTc2oUKuoh",
         "outputId": "af6bb28c-5df0-4c88-f00f-b0dda2d3dd69",
