--- a/processing_dataset/feature_extraction.ipynb
+++ b/processing_dataset/feature_extraction.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AgarwalMayank2/Face_Detection/blob/KNN_Tavishi/processing_dataset/feature_extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AgarwalMayank2/Face_Detection/blob/main/processing_dataset/feature_extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -27,40 +27,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eiHXMskx2ojl",
-        "outputId": "fa2b2954-4d44-4644-ac56-706e66e6d266"
+        "outputId": "71b14eab-1687-4794-f94f-7cfd23231c1e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Downloading from https://www.kaggle.com/api/v1/datasets/download/jessicali9530/lfw-dataset?dataset_version_number=4...\n"
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "100%|██████████| 112M/112M [00:00<00:00, 255MB/s] "
+            "100%|██████████| 112M/112M [00:00<00:00, 136MB/s]"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Extracting files...\n"
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "\n"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4\n"
           ]
@@ -82,14 +82,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7rZ-bi5f7Mhd",
-        "outputId": "03ef26a5-0591-46cd-ba11-95945276fcf9"
+        "outputId": "5830be98-ac47-473a-ccd5-cfff723a94d3"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "['/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Hasan_Wirayuda/Hasan_Wirayuda_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Khader_Rashid_Rahim/Khader_Rashid_Rahim_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/James_Cunningham/James_Cunningham_0003.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/James_Cunningham/James_Cunningham_0002.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/James_Cunningham/James_Cunningham_0001.jpg']\n"
+            "['/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Raja_Qureshi/Raja_Qureshi_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Crispin_Glover/Crispin_Glover_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Klaus_Schwab/Klaus_Schwab_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Kirk_Ferentz/Kirk_Ferentz_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Kirk_Ferentz/Kirk_Ferentz_0002.jpg']\n"
           ]
         }
       ],
@@ -127,20 +127,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "81bwLf5yD_va",
-        "outputId": "752f062b-c948-46ca-a9ab-f7f553ffdc6b"
+        "outputId": "09ae2ba8-1220-407b-d970-8d3b105c9ebc"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "total datapoints having person atleast 10 images are 4324\n"
+            "total datapoints having person atleast 10 images are 4324\n",
+            "Unique persons =  158\n"
           ]
         }
       ],
@@ -161,12 +162,15 @@
         "for person in person_imagepath:\n",
         "    total_filtered_datapoints+=len(person_imagepath[person])\n",
         "\n",
-        "print(\"total datapoints having person atleast 10 images are\",total_filtered_datapoints)\n"
+        "print(\"total datapoints having person atleast 10 images are\",total_filtered_datapoints)\n",
+        "print(\"Unique persons = \", len(person_imagepath))\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "mi_kMADyKPsj"
+      },
       "source": [
         "# Extracting features and saving processed datasets"
       ]
@@ -271,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "LW41ivV-PVnO"
       },
@@ -302,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1077,7 +1081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1106,7 +1110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "zP49tIbzPtfO"
       },
@@ -1166,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1880,14 +1884,12 @@
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
     "colab": {
       "collapsed_sections": [
         "svIt5l3bdrY_"
       ],
-      "gpuType": "V28",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
