--- a/applying_ML_algorithms/KNN_PRMLproj.ipynb
+++ b/applying_ML_algorithms/KNN_PRMLproj.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "L_9GgieIJlTd"
       ],
-      "authorship_tag": "ABX9TyNcWkVupfsUUuezmiDBtMi7",
+      "authorship_tag": "ABX9TyP3FHck3OcXLKbJQ1KgwP3O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "s9r-dpHDIufI"
       },
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "pNanG4XBJx-q"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "2sYnoEgFKlA5"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "MPcW1M_GOpjH"
       },
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "DnHVFCDXL8Qc"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "-nK2cWpxJsz3"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "OgLogzTLI2UA",
         "colab": {
@@ -209,7 +209,7 @@
         },
         "outputId": "73274d9f-ba46-4aa0-d4e4-2b9e8720bbe3"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -707,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Lcv0-yj-oC7e"
       },
@@ -764,7 +764,7 @@
       "metadata": {
         "id": "BXaJ8rPY-VAt"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -792,7 +792,7 @@
         "id": "Ymwq48vA-jQg",
         "outputId": "bfbc975e-6406-46b4-c687-0252027cd9d2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
         "id": "CG9Qs37d9OAB",
         "outputId": "3759ab31-9455-4eae-9e16-2529acebc12c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "PfPbJMxQie_9"
       },
@@ -975,7 +975,7 @@
         },
         "outputId": "2e2db05f-bfb3-48d8-a9fd-340249065686"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1029,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1094,7 +1094,7 @@
         "id": "uloPrW9AI3C1",
         "outputId": "a93f0073-98da-4cea-c4b7-9e767a403a31"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1129,7 @@
         "id": "fv62t5O0I-T4",
         "outputId": "3b799ac0-5ae4-49eb-bcb0-6160d550a9e4"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1289,7 +1289,7 @@
       "metadata": {
         "id": "_1nI48vn_lW9"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1304,7 +1304,7 @@
         "id": "5Z-mYjihBS35",
         "outputId": "83f8e7d3-4582-4766-f567-2594eeb4ae58"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,7 +1327,7 @@
         "id": "LIC8o561CnGQ",
         "outputId": "a2de9709-4c2f-476d-d041-72dfb961812d"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1351,7 +1351,7 @@
         "id": "eBpg84eHFHdj",
         "outputId": "529f3424-48e0-448b-c2a9-957f4164cd26"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1390,7 +1390,7 @@
         "id": "mpcm4fUqFjT9",
         "outputId": "b8dae239-1936-461d-f124-f733c8a284a6"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,7 +1432,7 @@
         "id": "5B8U4hwdHvlU",
         "outputId": "57709a91-bfb2-4c3a-dab3-cb8ce6326b4c"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1465,7 +1465,7 @@
         "id": "Nnvn1QkcFI8L",
         "outputId": "044e79c9-b885-4cdb-a5fe-1b9064aba70f"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1591,7 +1591,7 @@
         "id": "uZda_uNdGH79",
         "outputId": "3bfba36e-6553-4fb4-b52f-aedbeb2d6bf8"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1717,6 +1717,17 @@
     {
       "cell_type": "code",
       "source": [
+        "knn(3, X_train_lda, X_test_lda, y_test)"
+      ],
+      "metadata": {
+        "id": "64DqXngZVjWm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "knn(5, X_train_lda, X_test_lda, y_test)"
       ],
       "metadata": {
@@ -1726,7 +1737,7 @@
         "id": "-yK1LPbzI9wy",
         "outputId": "0fca6c05-fa3f-4577-a846-2841c723b99e"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1839,6 +1850,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn(7, X_train_lda, X_test_lda, y_test)"
+      ],
+      "metadata": {
+        "id": "vZ0ht_PDVtFu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
