--- a/applying_ML_algorithms/KNN_PRMLproj.ipynb
+++ b/applying_ML_algorithms/KNN_PRMLproj.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "L_9GgieIJlTd"
       ],
-      "authorship_tag": "ABX9TyMMtONfrmUEBTnZ/5iQMYu+",
+      "authorship_tag": "ABX9TyOuNvWMA6XKKIgwOy5Gd4XJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1258,11 +1258,11 @@
         "print(X_test_cnn_lda.shape)"
       ],
       "metadata": {
-        "id": "-XHjQn7PRdlK",
-        "outputId": "d995ebc8-ef80-4f50-ec44-cd48aff0b8ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-XHjQn7PRdlK",
+        "outputId": "d995ebc8-ef80-4f50-ec44-cd48aff0b8ae"
       },
       "execution_count": 23,
       "outputs": [
@@ -1660,11 +1660,11 @@
         "print(X_test_LBP_lda.shape)"
       ],
       "metadata": {
-        "id": "sAUVWGXLRfDO",
-        "outputId": "54ea5900-199d-4365-8a68-afbb7fe1f2ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sAUVWGXLRfDO",
+        "outputId": "54ea5900-199d-4365-8a68-afbb7fe1f2ac"
       },
       "execution_count": 35,
       "outputs": [
@@ -1867,10 +1867,10 @@
       ],
       "metadata": {
         "id": "4P2gwLJuOGmH",
-        "outputId": "bc738a70-4ca8-41a4-8a4e-8ff87c58d4c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bc738a70-4ca8-41a4-8a4e-8ff87c58d4c8"
       },
       "execution_count": 56,
       "outputs": [
@@ -2416,10 +2416,10 @@
       ],
       "metadata": {
         "id": "64DqXngZVjWm",
-        "outputId": "82bd9e60-2778-4f11-b682-8bbefad8d6a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "82bd9e60-2778-4f11-b682-8bbefad8d6a9"
       },
       "execution_count": 65,
       "outputs": [
@@ -2476,11 +2476,11 @@
         "print(X_test_lda_graph.shape)"
       ],
       "metadata": {
-        "id": "iIWO6qrNe13V",
-        "outputId": "48b5edf1-4eea-4e12-aeee-d60003096fe7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iIWO6qrNe13V",
+        "outputId": "48b5edf1-4eea-4e12-aeee-d60003096fe7"
       },
       "execution_count": 69,
       "outputs": [
@@ -2502,11 +2502,11 @@
         "print(\"Accuracy : \", acc, \" %\")"
       ],
       "metadata": {
-        "id": "7WKr03MNfICB",
-        "outputId": "acb6ad90-2db5-40c7-c10e-7aa032946162",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7WKr03MNfICB",
+        "outputId": "acb6ad90-2db5-40c7-c10e-7aa032946162"
       },
       "execution_count": 70,
       "outputs": [
@@ -2551,11 +2551,11 @@
         "print(np.unique(y_test_labels))"
       ],
       "metadata": {
-        "id": "1o-3N04ohKYs",
-        "outputId": "8c5752df-4214-44ca-a7c4-86820cadfd30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1o-3N04ohKYs",
+        "outputId": "8c5752df-4214-44ca-a7c4-86820cadfd30"
       },
       "execution_count": 73,
       "outputs": [
@@ -2626,12 +2626,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "MZPxFT4yeeuC",
-        "outputId": "616d9f49-6600-4371-84c7-5f82257c5685",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 543
-        }
+        },
+        "id": "MZPxFT4yeeuC",
+        "outputId": "616d9f49-6600-4371-84c7-5f82257c5685"
       },
       "execution_count": 90,
       "outputs": [
@@ -2713,12 +2713,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "MwspJsaZkJIp",
-        "outputId": "b210e324-58ea-465e-be1f-24c00fd3ea3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 271
-        }
+        },
+        "id": "MwspJsaZkJIp",
+        "outputId": "b210e324-58ea-465e-be1f-24c00fd3ea3e"
       },
       "execution_count": 99,
       "outputs": [
@@ -2736,12 +2736,90 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.colors import ListedColormap\n",
+        "\n",
+        "# Use your LDA-reduced data\n",
+        "X_train_plot = X_train_lda_graph\n",
+        "X_test_plot = X_test_lda_graph\n",
+        "\n",
+        "# Convert labels to integers for coloring\n",
+        "y_train_int = label_encoder.transform(y_train)\n",
+        "\n",
+        "# Define mesh grid boundaries\n",
+        "x_min, x_max = X_train_plot[:, 0].min() - 1, X_train_plot[:, 0].max() + 1\n",
+        "y_min, y_max = X_train_plot[:, 1].min() - 1, X_train_plot[:, 1].max() + 1\n",
+        "xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.05),\n",
+        "                     np.arange(y_min, y_max, 0.05))\n",
+        "\n",
+        "# Predict over the entire mesh grid using your KNN function\n",
+        "grid_points = np.c_[xx.ravel(), yy.ravel()]\n",
+        "grid_preds = []\n",
+        "\n",
+        "print(\"Generating decision boundary...\")\n",
+        "\n",
+        "for point in grid_points:\n",
+        "    # Use your custom KNN with just one test point at a time\n",
+        "    pred, _ = knn(5, X_train_plot, X_test=np.array([point]), y_test=[0])  # dummy y_test\n",
+        "    grid_preds.append(label_encoder.transform([pred[0]])[0])  # convert back to int\n",
+        "\n",
+        "Z = np.array(grid_preds).reshape(xx.shape)\n",
+        "\n",
+        "# Plot decision boundary\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "cmap_light = ListedColormap(['#FFCCCC', '#CCFFCC', '#CCCCFF', '#FFFFCC', '#E0CCFF'])\n",
+        "cmap_bold = ListedColormap(['#FF0000', '#00CC00', '#0000FF', '#CCCC00', '#8000FF'])\n",
+        "\n",
+        "plt.contourf(xx, yy, Z, cmap=cmap_light, alpha=0.6)\n",
+        "\n",
+        "# Plot training points\n",
+        "scatter = plt.scatter(X_train_plot[:, 0], X_train_plot[:, 1], c=y_train_int, cmap=cmap_bold, edgecolor='k', s=60)\n",
+        "plt.xlabel(\"LDA Component 1\")\n",
+        "plt.ylabel(\"LDA Component 2\")\n",
+        "plt.title(\"KNN Decision Boundary (Custom KNN)\")\n",
+        "\n",
+        "# Legend\n",
+        "handles = scatter.legend_elements()[0]\n",
+        "labels = label_encoder.inverse_transform(np.unique(y_train_int))\n",
+        "plt.legend(handles, labels, title=\"Classes\", loc=\"upper right\")\n",
+        "\n",
+        "plt.grid(True, linestyle='--', alpha=0.4)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ],
       "metadata": {
-        "id": "RyZWf49bnMHT"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 408
+        },
+        "id": "RyZWf49bnMHT",
+        "outputId": "1e26fd86-2564-4433-9ca9-92f976f55d9f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "y contains previously unseen labels: 2",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/utils/_encode.py\u001b[0m in \u001b[0;36m_encode\u001b[0;34m(values, uniques, check_unknown)\u001b[0m\n\u001b[1;32m    234\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 235\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0m_map_to_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    236\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/utils/_encode.py\u001b[0m in \u001b[0;36m_map_to_integer\u001b[0;34m(values, uniques)\u001b[0m\n\u001b[1;32m    173\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_nandict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mxp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/utils/_encode.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    173\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_nandict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mxp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/utils/_encode.py\u001b[0m in \u001b[0;36m__missing__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    166\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 167\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    168\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 2",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-100-e03be5118ca8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Convert labels to integers for coloring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0my_train_int\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabel_encoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Define mesh grid boundaries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/preprocessing/_label.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m    132\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mxp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_encode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muniques\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minverse_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/utils/_encode.py\u001b[0m in \u001b[0;36m_encode\u001b[0;34m(values, uniques, check_unknown)\u001b[0m\n\u001b[1;32m    235\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0m_map_to_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    236\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 237\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"y contains previously unseen labels: {str(e)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    238\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_unknown\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: y contains previously unseen labels: 2"
+          ]
+        }
+      ]
     }
   ]
 }
